Fixed mobile nav bar width and gap

--- a/components/MobileMenu/styles.module.scss
+++ b/components/MobileMenu/styles.module.scss
@@ -30,7 +30,7 @@
       position: absolute;
       top: 50%;
       right: 0;
-      width: 30px;
+      width: 34px;
       height: 2px;
       border-radius: 4px;
       background-color: rgb(10, 95, 135); /*COLOUR*/
@@ -55,13 +55,13 @@
         transition-property: transform;
       }
       &:before {
-        width: 120%;
+        width: 100%;
         top: -10px;
         opacity:1;
         transition: top 0.1s ease-in 0.25s, opacity 0.1s ease-in;
       }
       &:after {
-        width: 80%;
+        width: 100%;
         bottom:-10px;
         transform: rotate(0);
         transition: bottom 0.1s ease-in 0.25s, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19);
